# RayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  imgui.ini  vcpkg-old.json  vcpkg.json  xmake.lua
RayTracing/: CMakeLists.txt  xmake.lua
RayTracing/src/: Camera.cpp  Camera.h  Common.h  Image.cpp  Image.h  Random.h  Ray.h  Renderer.cpp  Renderer.h  Scene.h  SphereLayer.h  Timer.h  WalnutApp.cpp  main.cpp
overlays/imgui/: imgui-config.cmake.in  portfile.cmake  usage  vcpkg.json
